# solana

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dlmm_pools.json  meteora_pools.json  orca_pools.json  phoenix_pools.json  pools.json  saber_pools.json
docs/superpowers/plans/: 2026-05-03-long-tail-mev.md
docs/superpowers/specs/: 2026-05-03-long-tail-mev-design.md
scripts/: fetch_all.js  fetch_invariant_pools.js  fetch_lifinity_pools.js  fetch_meteora_dlmm.js  fetch_meteora_pools.js  fetch_orca_pool.sh  fetch_orca_pools.js  fetch_phoenix.js  fetch_pools.js  fetch_raydium_pools.js  fetch_saber_pools.js  merge_pools.js  package-lock.json  package.json  probe_damm.js  probe_damm2.js  show_rates.js
src/: config.rs  main.rs
src/arbitrage/: evaluator.rs  mod.rs  opportunity.rs  pool_check.rs  simulator.rs
src/dex/: dlmm.rs  invariant.rs  lifinity.rs  meteora.rs  mod.rs  orca.rs  phoenix.rs  raydium_amm.rs  raydium_clmm.rs  saber.rs  stable_math.rs  types.rs
src/graph/: bellman_ford.rs  exchange_graph.rs  mod.rs
src/jito/: bundle.rs  client.rs  mod.rs
src/streamer/: client.rs  subscription.rs
