[package]
name = "solana-mev"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-mev"
path = "src/main.rs"

[dependencies]
tokio            = { version = "1", features = ["full"] }
tonic            = { version = "0.12", features = ["tls", "tls-roots"] }
prost            = "0.13"
# Yellowstone Geyser gRPC protobuf types (Triton / rpcpool)
yellowstone-grpc-proto = "5"
futures          = "0.3"
tokio-stream     = "0.1"
anyhow           = "1"
thiserror        = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
dotenvy          = "0.15"
dashmap          = "6"
bs58             = "0.5"
base64           = "0.22"
reqwest          = { version = "0.12", features = ["json", "native-tls"] }
solana-sdk       = "2"
solana-client    = "2"
borsh            = "1"
rand             = "0.8"
bincode          = "1"
spl-token                    = { version = "6", features = ["no-entrypoint"] }
spl-token-2022               = { version = "4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4", features = ["no-entrypoint"] }
mimalloc                     = { version = "0.1", default-features = false }

[profile.release]
opt-level      = 3
lto            = "thin"       # cross-crate inlining; faster than "fat" with near-same benefit
codegen-units  = 1            # single codegen unit → better inlining across modules
panic          = "abort"      # no unwinding overhead; saves ~5% binary size
strip          = "symbols"    # smaller binary, faster startup
